fixing the background img issue on safari

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -65,6 +65,9 @@ header {
     background-attachment: fixed;
     min-height: 85vh;
     max-height: 100vh;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
     color: $content-light-font;
 }
 
